fix: dark mode correction

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,5 +1,9 @@
 /* Paleta Listify */
 :root {
+  --ion-text-color: #000000;
+  --ion-text-color-rgb: 0, 0, 0;
+  --ion-background-color: #ffffff;
+  --ion-background-color-rgb: 255, 255, 255;
   /* Primary: Azul deep */
   --ion-color-primary: #0A2342;
   --ion-color-primary-rgb: 10, 35, 66;
